test(server): implement test for newly-added error count